add feedbacks slider

--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ body, html {
 
 .intro-bg {
   position: relative;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1)), url(./images/stock.jpg);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1)), url(../images/stock.jpg);
   background-size: cover;
   background-position: center;
 }
